ads section creation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,7 +210,7 @@ section.hero .hero-img{
 
 .featured-products{
     padding: 10px 75px;
-    background: #FAFAFA;
+    background: #f5f5f5;
     border-radius: 5px;
 }
 
@@ -240,22 +240,29 @@ section.hero .hero-img{
 
 .featured-products .owl-nav .owl-prev{
     left: -65px;
+}
+
+.featured-products .owl-nav button{
+    transition: all 500ms;
+    overflow: hidden;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50% !important;
     position: absolute;
     font-size: 30px !important;
-    background: #399A19 !important;
+    background: #399a197a !important;
     color: #fff !important;
-    width: 46px;
-    border-radius: 50%;
+}
+
+.featured-products .owl-nav button:hover{
+    background: #399a19 !important;
 }
 
 .featured-products .owl-nav .owl-next{
     right: -65px;
-    position: absolute;
-    font-size: 30px !important;
-    background: #399A19 !important;
-    color: #fff !important;
-    width: 46px;
-    border-radius: 50%;
 }
 
 .featured-products .featuredP-name{
@@ -272,12 +279,156 @@ section.hero .hero-img{
     margin: auto;
 }
 
+/* ads carousel */
+.ads{
+    padding: 15px 75px 40px 75px;
+    background: #E6F9E0;
+    border-radius: 10px;
+}
+
+.ads .section-name{
+    font-size: 18px;
+    font-weight: 800;
+    color: #175104;
+}
+
+.ads .owl-item{
+    background: #eaeaea;
+    height: 248px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.ads .owl-item .item{
+    display: flex;
+    height: 100%;
+    justify-content: center;
+}
+
+.ads .owl-dots{
+    display: none;
+}
+
+.ads .owl-nav{
+    position: absolute;
+    top: 35%;
+    width: 100%;
+}
+
+.ads .owl-nav .owl-prev{
+    left: -65px;
+}
+
+.ads .owl-nav button{
+    transition: all 500ms;
+    overflow: hidden;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50% !important;
+    position: absolute;
+    font-size: 30px !important;
+    background: #399a197a !important;
+    color: #fff !important;
+}
+
+.ads .owl-nav button:hover{
+    background: #399a19 !important;
+}
+
+.ads .owl-nav .owl-next{
+    right: -65px;
+}
+
+.ads .featuredP-name{
+    margin-bottom: 0px;
+    font-size: 13px;
+    font-weight: 700;
+    color: #175104;
+}
+
+.ads .featuredP-price{
+    margin-bottom: 0px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #175104;
+}
+
+.ads .featuredP-img{
+    width: 100% !important;
+    margin: auto;
+}
+
+.ads .bottom-section{
+    height: 55px;
+    background: #EAEAEA;
+    position: absolute;
+    width: 100%;
+    justify-content: space-between;
+    padding: 9px 12px;
+}
+
+.ads .o-btn{
+    background: #fff;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    color: #37B34A;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 500ms;
+}
+
+.ads .o-btn:hover{
+    background: #37B34A;
+    color: #fff;
+    text-decoration: none;
+}
+
 .hide-on-mobile{
     display: flex;
 }
 
 .show-on-mobile{
     display: none;
+}
+
+.post-ads{
+    padding: 10px 100px;
+}
+
+.post-ads .post-ads-bg{
+    padding: 20px;
+    background: linear-gradient(258.76deg, rgba(112, 112, 112, 0) -30.35%, #EEEEEE 104.18%);
+}
+
+.post-ads .post-ads-img{
+    width: 100%;
+}
+
+.post-ads .text-div{
+    align-items: center;
+}
+
+.post-ads .text-div h3{
+    font-size: 23px;
+    font-weight: 800;
+    color: #175104;
+}
+
+.post-ads .text-div a{
+    color: #FFA010;
+    transition: all 500ms;
+}
+
+.post-ads .text-div a:hover{
+    text-decoration: none;
+    color: #b8720a;
 }
 
 @media screen and (max-width:1000px) {
@@ -313,12 +464,50 @@ section.hero .hero-img{
     }
 
     .main-page{
-        padding: 20px 0;
+        padding: 20px 10px;
     }
 
     .sell-btn{
         background-color: #FFA010 !important;
         border-color: #FFA010 !important;
+    }
+
+    .featured-products{
+        padding: 10px 25px;
+    }
+
+    .featured-products .owl-nav button {
+        width: 30px;
+        height: 30px;
+    }
+
+    .featured-products .owl-nav .owl-next {
+        right: -35px;
+    }
+
+    .featured-products .owl-nav .owl-prev {
+        left: -35px;
+    }
+
+    .ads .owl-nav button {
+        width: 30px;
+        height: 30px;
+    }
+
+    .ads .owl-nav .owl-next {
+        right: -35px;
+    }
+
+    .ads .owl-nav .owl-prev {
+        left: -35px;
+    }
+
+    .ads{
+        padding: 20px 25px;
+    }
+
+    .ads .owl-item{
+        height: 280px;
     }
 }
 
